# lararust

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
resources/views/: welcome.larablade.html
routes/: web.rs
src/: app.rs  main.rs  prelude.rs
src/cli/: cache.rs  mod.rs  serve.rs
src/http/: README.md  mod.rs  requests.rs  router.rs  server.rs
src/resources/views/: welcome.html.tera
src/routes/: web.rs
src/support/: env.rs
src/view/: cache.rs  compiler.rs  context.rs  directives.rs  helpers.rs  larablade.rs  mod.rs  renderer.rs
storage/framework/views/: welcome.html
