[package]
name = "lararust"
version = "0.2.0"
edition = "2024"
description = "A Rust framework inspired by Laravel"
authors = ["Vinicius Rech de Camargo"]
license = "MIT"

[dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
dotenvy = "0.15.7"
colored = "3.0.0"
axum = "0.8.6"
tera = "1.20.1"
chrono = "0.4.42"
regex = "1.12.2"
serde_json = "1.0.145"
